--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         <div class="container-fluid p-3 p-md-5">
           <h1>A Simple Bookmark Manager</h1>
           <p>
-            A clean and simple interface to organize your favorite websirtes.
+            A clean and simple interface to organize your favorite websites.
             Open a new browser tab and see your sites loas instantly. Try it for
             free.
           </p>
@@ -256,226 +256,240 @@
     <!-- fin ejercicio2 -->
 
     <!--Ejercicio3 -->
-    <div class="d-flex justify-content-center align-items-center my-5">
-      <div class="col-4 text-center">
-        <h1>Download the extension</h1>
-        <p>
-          We've got more browsers in the pipeline. Please do let us know if
-          you've got a favourite you'd like us to prioritize.
-        </p>
-      </div>
-    </div>
-    <div
-      class="d-flex justify-content-center mx-5 card-container-custom-height"
-    >
-      <!-- card1 -->
-      <div class="card border-0 shadow me-4 fixed-height" id="card1">
-        <img
-          src="/Imagenes/logo-chrome.svg"
-          class="card-img-top img-fluid my-5 py-1"
-          alt="logo-chrome"
-          id="card-image1"
-        />
-        <div class="card-body text-center">
-          <h5 class="card-title">Add to Chrome</h5>
-          <p class="card-text">Minimum version 62</p>
-          <img
-            src="/Imagenes/bg-dots.svg"
-            class="d-flex my-4"
-            alt="bg-dots"
-            id="bg-dots"
-          />
-          <a href="#" class="btn btn-primary btn-sm button-padding"
-            >Add & install extension</a
-          >
+    <div id="ejercicio3">
+      <div class="d-flex justify-content-center align-items-center my-5">
+        <div class="col-12 col-md-4 text-center">
+          <h1>Download the extension</h1>
+          <p>
+            We've got more browsers in the pipeline. Please do let us know if
+            you've got a favourite you'd like us to prioritize.
+          </p>
         </div>
       </div>
-      <!-- card2 -->
-      <div
-        class="card border-0 shadow me-4 fixed-height custom-card2"
-        id="card2"
-      >
-        <img
-          src="/Imagenes/logo-firefox.svg"
-          class="card-img-top img-fluid my-5 py-1"
-          alt="logo-chrome"
-          id="card-image2"
-        />
-        <div class="card-body text-center">
-          <h5 class="card-title">Add to Firefox</h5>
-          <p class="card-text">Minimum version 55</p>
-          <img
-            src="/Imagenes/bg-dots.svg"
-            class="d-flex my-4"
-            alt="bg-dots"
-            id="bg-dots"
-          />
-          <a href="#" class="btn btn-primary btn-sm button-padding"
-            >Add & install extension</a
+      <!-- cards -->
+      <div class="container mb-5" id="card-container">
+        <div class="row justify-content-center">
+          <!-- Card 1 -->
+          <div
+            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0"
+            id="card1"
           >
-        </div>
-      </div>
-      <!-- card3 -->
-      <div
-        class="card border-0 shadow me-4 fixed-height custom-card3"
-        id="card3"
-      >
-        <img
-          src="/Imagenes/logo-opera.svg"
-          class="card-img-top img-fluid my-5 py-1"
-          alt="logo-opera"
-          id="card-image3"
-        />
-        <div class="card-body text-center">
-          <h5 class="card-title">Add to Opera</h5>
-          <p class="card-text">Minimum version 46</p>
-          <img
-            src="/Imagenes/bg-dots.svg"
-            class="d-flex my-4"
-            alt="bg-dots"
-            id="bg-dots"
-          />
-          <a href="#" class="btn btn-primary btn-sm button-padding"
-            >Add & install extension</a
+            <div class="card border-0 shadow fixed-height">
+              <img
+                src="/Imagenes/logo-chrome.svg"
+                class="card-img-top img-fluid my-5 py-1"
+                alt="logo-chrome"
+                id="card-image1"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Add to Chrome</h5>
+                <p class="card-text">Minimum version 62</p>
+                <img
+                  src="/Imagenes/bg-dots.svg"
+                  class="d-flex my-4 mx-auto"
+                  alt="bg-dots"
+                />
+                <a href="#" class="btn btn-primary btn-sm button-padding"
+                  >Add & install extension</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div
+            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0 mt-4"
+            id="card2"
           >
+            <div class="card border-0 shadow fixed-height">
+              <img
+                src="/Imagenes/logo-firefox.svg"
+                class="card-img-top img-fluid my-5 py-1"
+                alt="logo-firefox"
+                id="card-image2"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Add to Firefox</h5>
+                <p class="card-text">Minimum version 55</p>
+                <img
+                  src="/Imagenes/bg-dots.svg"
+                  class="d-flex my-4 mx-auto"
+                  alt="bg-dots"
+                />
+                <a href="#" class="btn btn-primary btn-sm button-padding"
+                  >Add & install extension</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div
+            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0 mt-5"
+            id="card3"
+          >
+            <div class="card border-0 shadow fixed-height">
+              <img
+                src="/Imagenes/logo-opera.svg"
+                class="card-img-top img-fluid my-5 py-1"
+                alt="logo-opera"
+                id="card-image3"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Add to Opera</h5>
+                <p class="card-text">Minimum version 46</p>
+                <img
+                  src="/Imagenes/bg-dots.svg"
+                  class="d-flex my-4 mx-auto"
+                  alt="bg-dots"
+                />
+                <a href="#" class="btn btn-primary btn-sm button-padding"
+                  >Add & install extension</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- end of cards -->
     </div>
     <!--fin ejercicio3 -->
     <!-- Ejercicio4 -->
-    <div class="d-flex justify-content-center align-items-center my-5">
-      <div class="col-4 text-center">
-        <h1>Frequently asked questions</h1>
-        <p class="my-4">
-          Here are some of out FAQs. If you have any other questions you'd like
-          asnwered please deel free to email us.
-        </p>
-      </div>
-    </div>
-    <div class="row col-5 py-0 mx-auto">
-      <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne"
-              aria-expanded="false"
-              aria-controls="flush-collapseOne"
-            >
-              What is Bookmark?
-            </button>
-          </h2>
-          <div
-            id="flush-collapseOne"
-            class="accordion-collapse collapse"
-            aria-labelledby="flush-headingOne"
-            data-bs-parent="#accordionFlushExample"
-          >
-            <div class="accordion-body">
-              Placeholder content for this accordion, which is intended to
-              demonstrate the <code>.accordion-flush</code> class. This is the
-              first item's accordion body.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo"
-              aria-expanded="false"
-              aria-controls="flush-collapseTwo"
-            >
-              How can I request a new browser?
-            </button>
-          </h2>
-          <div
-            id="flush-collapseTwo"
-            class="accordion-collapse collapse"
-            aria-labelledby="flush-headingTwo"
-            data-bs-parent="#accordionFlushExample"
-          >
-            <div class="accordion-body">
-              Placeholder content for this accordion, which is intended to
-              demonstrate the <code>.accordion-flush</code> class. This is the
-              second item's accordion body. Let's imagine this being filled with
-              some actual content.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseThree"
-              aria-expanded="false"
-              aria-controls="flush-collapseThree"
-            >
-              Is there a mobile app?
-            </button>
-          </h2>
-          <div
-            id="flush-collapseThree"
-            class="accordion-collapse collapse"
-            aria-labelledby="flush-headingThree"
-            data-bs-parent="#accordionFlushExample"
-          >
-            <div class="accordion-body">
-              Placeholder content for this accordion, which is intended to
-              demonstrate the <code>.accordion-flush</code> class. This is the
-              third item's accordion body. Nothing more exciting happening here
-              in terms of content, but just filling up the space to make it
-              look, at least at first glance, a bit more representative of how
-              this would look in a real-world application.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne"
-              aria-expanded="false"
-              aria-controls="flush-collapseOne"
-            >
-              What about other Chromium browsers?
-            </button>
-          </h2>
-          <div
-            id="flush-collapseOne"
-            class="accordion-collapse collapse"
-            aria-labelledby="flush-headingOne"
-            data-bs-parent="#accordionFlushExample"
-          >
-            <div class="accordion-body">
-              Placeholder content for this accordion, which is intended to
-              demonstrate the <code>.accordion-flush</code> class. This is the
-              first item's accordion body.
-            </div>
-          </div>
+    <div class="container my-5" id="faqs">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-6 text-center">
+          <h1>Frequently asked questions</h1>
+          <p class="my-4">
+            Here are some of out FAQs. If you have any other questions you'd
+            like asnwered please deel free to email us.
+          </p>
         </div>
       </div>
-      <div class="py-4 text-center">
-        <button
-          type="button"
-          class="btn btn-primary btn-sm me-2 button-padding"
-          id="button-faqs"
-        >
-          More info
-        </button>
-      </div>
-    </div>
 
-    <!-- Medias queries -->
-    @media (min-width: 576px) { }
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-6">
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  What is Bookmark?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the first item's accordion body.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseTwo"
+                >
+                  How can I request a new browser?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the second item's accordion body. Let's imagine this being
+                  filled with some actual content.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                  Is there a mobile app?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the third item's accordion body. Nothing more exciting
+                  happening here in terms of content, but just filling up the
+                  space to make it look, at least at first glance, a bit more
+                  representative of how this would look in a real-world
+                  application.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  What about other Chromium browsers?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the first item's accordion body.
+                </div>
+              </div>
+            </div>
+            <div class="py-4 text-center">
+              <button
+                type="button"
+                class="btn btn-primary btn-sm me-2 button-padding"
+                id="button-faqs"
+              >
+                More info
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
