--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
             class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0"
             id="card1"
           >
-            <div class="card border-0 shadow fixed-height">
+            <div class="card border-0 shadow">
               <img
                 src="/Imagenes/logo-chrome.svg"
                 class="card-img-top img-fluid my-5 py-1"
@@ -298,10 +298,10 @@
 
           <!-- Card 2 -->
           <div
-            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0 mt-4"
+            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0"
             id="card2"
           >
-            <div class="card border-0 shadow fixed-height">
+            <div class="card border-0 shadow">
               <img
                 src="/Imagenes/logo-firefox.svg"
                 class="card-img-top img-fluid my-5 py-1"
@@ -325,10 +325,10 @@
 
           <!-- Card 3 -->
           <div
-            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0 mt-5"
+            class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0"
             id="card3"
           >
-            <div class="card border-0 shadow fixed-height">
+            <div class="card border-0 shadow">
               <img
                 src="/Imagenes/logo-opera.svg"
                 class="card-img-top img-fluid my-5 py-1"
