--- a/src/index.html
+++ b/src/index.html
@@ -491,5 +491,93 @@
         </div>
       </div>
     </div>
+
+    <!-- Ejercicio 5 -->
+    <!-- Form -->
+    <div id="form-container">
+      <div class="container my-5 text-center" id="form">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-6">
+            <p class="my-4">35 000+ ALREADY JOINED</p>
+            <h1>Stay up-to-date with what we are doing</h1>
+
+            <form
+              class="d-flex flex-column flex-md-row mt-4 align-items-center gap-2"
+            >
+              <div class="w-100 w-md-60">
+                <input
+                  type="email"
+                  class="form-control w-100"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  placeholder="Enter your email address"
+                />
+              </div>
+              <div class="w-100 w-md-35">
+                <button
+                  type="submit"
+                  class="btn btn-primary w-100"
+                  id="form-button"
+                  style="white-space: nowrap"
+                >
+                  Contact Us
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- form fin -->
+    <!-- footer -->
+
+    <nav
+      class="navbar navbar-expand-lg bg-black p-2"
+      style="--bs-bg-opacity: 0.85"
+      id="footer-navbar"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            src="/Imagenes/logo-bookmark.svg"
+            alt="logo-bookmark"
+            height="24"
+            class="d-inline-block align-text-top"
+        /></a>
+        <button
+          class="navbar-toggler ms-auto"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link px-3 text-white" aria-current="page" href="#"
+                >FEATURES</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3 text-white" href="#">PRICING</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3 text-white" href="#">CONTACT</a>
+            </li>
+          </ul>
+          <div class="d-flex gap-4 me-5 pe-5 ms-auto">
+            <img src="../Imagenes/icon-facebook.svg" alt="icon-facebook" />
+            <img src="../Imagenes/icon-twitter.svg" alt="icon-twitter" />
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- navBarfin -->
+
+    <!-- fin Ejercicio 5 -->
   </body>
 </html>
