--- a/src/index.html
+++ b/src/index.html
@@ -33,21 +33,34 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link px-3" aria-current="page" href="#">FEATURES</a>
+              <a
+                class="nav-link px-3"
+                aria-current="page"
+                href="#"
+                id="nav-bar-features"
+                >FEATURES</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">PRICING</a>
+              <a class="nav-link px-3" href="#" id="nav-bar-pricing">PRICING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">CONTACT</a>
+              <a class="nav-link px-3" href="#" id="nav-bar-contact">CONTACT</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <button class="btn btn-danger px-4" type="button">LOGIN</button>
+            <button
+              class="btn btn-danger px-4"
+              type="button"
+              id="nav-bar-login-button"
+            >
+              LOGIN
+            </button>
           </form>
         </div>
       </div>
     </nav>
+
     <!-- navBarfin -->
 
     <!-- Ejercicio1 -->
@@ -73,12 +86,17 @@
           <div
             class="d-flex flex-wrap justify-content-center justify-content-md-start gap-2"
           >
-            <button type="button" class="btn btn-primary btn-sm button-padding">
+            <button
+              type="button"
+              class="btn btn-primary btn-sm button-padding"
+              id="button-get-it-chrome"
+            >
               Get it on Chrome
             </button>
             <button
               type="button"
               class="btn btn-light btn-sm shadow-sm button-padding"
+              id="button-get-it-firefox"
             >
               Get it on Firefox
             </button>
@@ -254,7 +272,6 @@
     <!-- tab3 fin -->
 
     <!-- fin ejercicio2 -->
-
     <!--Ejercicio3 -->
     <div id="ejercicio3">
       <div class="d-flex justify-content-center align-items-center my-5">
@@ -267,7 +284,7 @@
         </div>
       </div>
       <!-- cards -->
-      <div class="container mb-5" id="card-container">
+      <div class="container my-5" id="card-container">
         <div class="row justify-content-center">
           <!-- Card 1 -->
           <div
@@ -289,7 +306,10 @@
                   class="d-flex my-4 mx-auto"
                   alt="bg-dots"
                 />
-                <a href="#" class="btn btn-primary btn-sm button-padding"
+                <a
+                  href="#"
+                  class="btn btn-primary btn-sm button-padding"
+                  id="button-card1"
                   >Add & install extension</a
                 >
               </div>
@@ -316,7 +336,10 @@
                   class="d-flex my-4 mx-auto"
                   alt="bg-dots"
                 />
-                <a href="#" class="btn btn-primary btn-sm button-padding"
+                <a
+                  href="#"
+                  class="btn btn-primary btn-sm button-padding"
+                  id="button-card2"
                   >Add & install extension</a
                 >
               </div>
@@ -343,7 +366,10 @@
                   class="d-flex my-4 mx-auto"
                   alt="bg-dots"
                 />
-                <a href="#" class="btn btn-primary btn-sm button-padding"
+                <a
+                  href="#"
+                  class="btn btn-primary btn-sm button-padding"
+                  id="button-card3"
                   >Add & install extension</a
                 >
               </div>
@@ -352,8 +378,9 @@
         </div>
       </div>
       <!-- end of cards -->
+      <!--fin ejercicio3 -->
     </div>
-    <!--fin ejercicio3 -->
+
     <!-- Ejercicio4 -->
     <div class="container my-5" id="faqs">
       <div class="row justify-content-center">
@@ -498,7 +525,7 @@
       <div class="container my-5 text-center" id="form">
         <div class="row justify-content-center">
           <div class="col-12 col-md-6">
-            <p class="my-4">35 000+ ALREADY JOINED</p>
+            <p class="my-4 text-white">35 000+ ALREADY JOINED</p>
             <h1>Stay up-to-date with what we are doing</h1>
 
             <form
@@ -570,7 +597,12 @@
             </li>
           </ul>
           <div class="d-flex gap-4 me-5 pe-5 ms-auto">
-            <img src="../Imagenes/icon-facebook.svg" alt="icon-facebook" />
+            <img
+              src="../Imagenes/icon-facebook.svg"
+              alt="icon-facebook"
+              style="cursor: pointer"
+              id="icon-facebook"
+            />
             <img src="../Imagenes/icon-twitter.svg" alt="icon-twitter" />
           </div>
         </div>
