--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="main.css" />
-    <script src="../src/bootstrap.bundle.min.js"></script>
+    <script defer src="../src/bootstrap.bundle.min.js"></script>
+    <script defer src="../src/bootstrap-validation.js"></script>
     <title>1.2 Bootsrap and Saas</title>
   </head>
   <body>
@@ -529,18 +530,23 @@
             <h1>Stay up-to-date with what we are doing</h1>
 
             <form
-              class="d-flex flex-column flex-md-row mt-4 align-items-center gap-2"
+              class="d-flex flex-column flex-md-row mt-4 align-items-center gap-2 needs-validation"
+              novalidate
             >
-              <div class="w-100 w-md-60">
+              <div class="w-100 w-md-60 position-relative">
                 <input
                   type="email"
                   class="form-control w-100"
                   id="exampleInputEmail1"
                   aria-describedby="emailHelp"
                   placeholder="Enter your email address"
+                  required
                 />
+                <div class="invalid-tooltip">
+                  Whoops, make sure it's an email
+                </div>
               </div>
-              <div class="w-100 w-md-35">
+              <div class="w-100 w-md-35 position-relative">
                 <button
                   type="submit"
                   class="btn btn-primary w-100"
@@ -585,15 +591,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link px-3 text-white" aria-current="page" href="#"
+              <a
+                class="nav-link px-3 text-white"
+                aria-current="page"
+                href="#"
+                id="footer-nav-link"
                 >FEATURES</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3 text-white" href="#">PRICING</a>
+              <a class="nav-link px-3 text-white" href="#" id="footer-nav-link"
+                >PRICING</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3 text-white" href="#">CONTACT</a>
+              <a class="nav-link px-3 text-white" href="#" id="footer-nav-link"
+                >CONTACT</a
+              >
             </li>
           </ul>
           <div class="d-flex gap-4 me-5 pe-5 ms-auto">
