--- a/src/index.html
+++ b/src/index.html
@@ -269,7 +269,7 @@
         </div>
       </div>
 
-      <div class="container my-5" id="card-container">
+      <div class="container my-5 me-0" id="card-container">
         <div class="row justify-content-center">
           <div
             class="col-md-4 col-12 d-flex justify-content-center mb-3 mb-md-0"
