fix images error

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img
-            src="/Imagenes/logo-bookmark.svg"
+            src="../Imagenes/logo-bookmark.svg"
             alt="logo-bookmark"
             height="24"
             class="d-inline-block align-text-top"
@@ -64,7 +64,7 @@
     <div class="row py-5 d-flex align-items-center">
       <div class="col-12 col-md-6 order-1 order-md-2 text-center">
         <img
-          src="/Imagenes/illustration-hero.svg"
+          src="../Imagenes/illustration-hero.svg"
           class="img-fluid"
           alt="computer-image"
         />
@@ -165,7 +165,7 @@
         >
           <div class="col-12 col-md-6 order-1 order-md-1">
             <img
-              src="/Imagenes/illustration-features-tab-1.svg"
+              src="../Imagenes/illustration-features-tab-1.svg"
               class="img-fluid"
               alt="computer-image"
             />
@@ -200,7 +200,7 @@
         >
           <div class="col-12 col-md-6 order-1 order-md-1">
             <img
-              src="/Imagenes/illustration-features-tab-2.svg"
+              src="../Imagenes/illustration-features-tab-2.svg"
               class="img-fluid ms-5 ps-5"
               alt="computer-image"
             />
@@ -234,7 +234,7 @@
         >
           <div class="col-12 col-md-6 order-1 order-md-1">
             <img
-              src="/Imagenes/illustration-features-tab-3.svg"
+              src="../Imagenes/illustration-features-tab-3.svg"
               class="img-fluid ms-5 ps-5"
               alt="computer-image"
             />
@@ -277,7 +277,7 @@
           >
             <div class="card border-0 shadow">
               <img
-                src="/Imagenes/logo-chrome.svg"
+                src="../Imagenes/logo-chrome.svg"
                 class="card-img-top img-fluid my-5 py-1"
                 alt="logo-chrome"
                 id="card-image1"
@@ -286,7 +286,7 @@
                 <h5 class="card-title">Add to Chrome</h5>
                 <p class="card-text">Minimum version 62</p>
                 <img
-                  src="/Imagenes/bg-dots.svg"
+                  src="../Imagenes/bg-dots.svg"
                   class="d-flex my-4 mx-auto"
                   alt="bg-dots"
                 />
@@ -306,7 +306,7 @@
           >
             <div class="card border-0 shadow">
               <img
-                src="/Imagenes/logo-firefox.svg"
+                src="../Imagenes/logo-firefox.svg"
                 class="card-img-top img-fluid my-5 py-1"
                 alt="logo-firefox"
                 id="card-image2"
@@ -315,7 +315,7 @@
                 <h5 class="card-title">Add to Firefox</h5>
                 <p class="card-text">Minimum version 55</p>
                 <img
-                  src="/Imagenes/bg-dots.svg"
+                  src="../Imagenes/bg-dots.svg"
                   class="d-flex my-4 mx-auto"
                   alt="bg-dots"
                 />
@@ -335,7 +335,7 @@
           >
             <div class="card border-0 shadow">
               <img
-                src="/Imagenes/logo-opera.svg"
+                src="../Imagenes/logo-opera.svg"
                 class="card-img-top img-fluid my-5 py-1"
                 alt="logo-opera"
                 id="card-image3"
@@ -344,7 +344,7 @@
                 <h5 class="card-title">Add to Opera</h5>
                 <p class="card-text">Minimum version 46</p>
                 <img
-                  src="/Imagenes/bg-dots.svg"
+                  src="../Imagenes/bg-dots.svg"
                   class="d-flex my-4 mx-auto"
                   alt="bg-dots"
                 />
@@ -546,7 +546,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img
-            src="/Imagenes/logo-bookmark.svg"
+            src="../Imagenes/logo-bookmark.svg"
             alt="logo-bookmark"
             height="24"
             class="d-inline-block align-text-top"
